﻿This file includes only a short list of the changes between Media Player Classic - BE's versions.

English translation of the change log made by u_shell.

Legend:
+ Added
* Changed
! Fixed

1.5.0 (beta)
==============================
Windows XP is no longer supported.

Updated libraries:
	ffmpeg git-n3.2-dev-320-g0a088de;
	libflac git-1.3.1-215-ga52177b;
	Little-CMS git-2.7-69-g5c23621;
	MediaInfo git-v0.7.87-4-g5cf23b8;

1.4.6
==============================
Splitters and source filters
Added support for multiline tags in ID3v2.
Fixed reading ID3v2.4 tags.
Built-in filters sources can now work with HTTP / HTTPS independently.

ShoutcastSource
Fixed playback MPEG Version 2 Layer 3 streams.
Added support for opening M3U and XSPF playlists. Improved support for PLS playlists.

DTS AC3 Source
Added support for DTS Express.

UDP/HTTP Reader
Added playback from standard input (stdin).
Corrected shutdown of the filter.
Reduced memory usage and waiting delay.
Added support for opening streams with content-type "video/mp2t".
Fixed a bug due to which the playback could stop.

AviSplitter
Added support for AAC audio tracks with ID 0x706D.

AudioSplitter
Fixed playback of TAK files.
Added support .dtshd files (labeled 'DTSHDHDR' at the beginning of the file).

MPEGSplitter
Improved handling of invalid data at the beginning of MPEG files.
Display a name of the service in the name of the program.
Optimization of opening files.
Fixed and optimized playback of HDMV and DVB subtitles.
Added support for Teletext subtitles.
Improved support for files that are downloaded and their size and duration are increased.
Added support for Opus.
Improved support for .ssif files.
Added support for H.264 MVC streams for 3D Blu-ray discs (3D viewing requires LAV Video Decoder and madVR).
Fixed incorrect determination of the duration for long records.
Added support for DTS Express tracks.

MatroskaSplitter
Added "DESCRIPTION" tag support.