@@ -8,6 +8,7 @@
 1.5.0 (beta)
 ==============================
 Windows XP больше не поддерживается.
+Вместо d3dcompiler_43.dll теперь используется d3dcompiler_47.dll.
 
 Обновлены библиотеки:
 	ffmpeg git-n3.2-dev-320-g0a088de;
